--- a/MagicSearch/AndroidManifest.xml
+++ b/MagicSearch/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="de.mizi.magicsearch.MainActivity"
+            android:name="de.mizi.magicsearch.ormlite.examples.HelloAndroid"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
