--- a/MagicSearch/AndroidManifest.xml
+++ b/MagicSearch/AndroidManifest.xml
@@ -4,6 +4,9 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
@@ -14,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="de.mizi.magicsearch.output.FragmentMainActivity"
+            android:name="de.mizi.magicsearch.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".output.FragmentMainActivity"></activity>
     </application>
-
+	
 </manifest>
