+ implemented card search

--- a/MagicSearch/AndroidManifest.xml
+++ b/MagicSearch/AndroidManifest.xml
@@ -26,6 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".output.FragmentMainActivity"></activity>
+        <activity android:name="SearchResultListActivity"></activity>
     </application>
 	
 </manifest>
